# PR-ComfyUI-Malefish-Custom-Scripts-cfd2354c

./: __init__.py  malefish.json  malefish.py  pyproject.toml  requirements.txt
py/conditioning/: combine_prompts.py  random_prompt.py
py/io/: csv_prompts_loader.py  multi_lora_loader.py
